# glance-transmission

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  publish.yml
docs/: example-glance-config.yml
src/: api.rs  lib.rs  main.rs
