[package]
name = "glance-transmission"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "glance-transmission"
path = "src/main.rs"
